--- a/hw7.tex
+++ b/hw7.tex
@@ -203,5 +203,10 @@
 
     \end{enumerate}
 
+    \subsubsection*{Problem 4}
+    We compute
+    $$(P^T)^3 \begin{pmatrix} 1/2 \\ 1/2 \\ 0 \end{pmatrix} = \begin{pmatrix} 0.4028 \\ 0.1759 \\ 0.4213 \end{pmatrix}$$
+    Thus $\boxed{P(X_3 = 3) = 0.4213}$.
+
 \end{flushleft}
 \end{document}
