--- a/hw7.tex
+++ b/hw7.tex
@@ -184,7 +184,7 @@
         Since the states $\{1, 2, 3\}$ and $\{4, 5\}$ are in different communicating classes, the Markov chain is $\boxed{\text{not irreducible}}$. Looking at the graph, we also characterize each state:
         $$\boxed{\begin{cases}
             \text{1: recurrent and periodic with period 2} \\
-            \text{2: transient and aperiodic} \\
+            \text{2: transient and periodic with period } \infty \\
             \text{3: recurrent and periodic with period 2} \\
             \text{4: transient and aperiodic} \\
             \text{5: recurrent and aperiodic}
